# zxing-cpp-deprecated-official

./: .gitignore  CMakeLists.txt  ZXingVersion.h.in  source_files.cmake
cli/: BUILD
cli/src/: zxing_writer_cli.cpp
core/: BUILD
core/src/zxing/: EncodeHints.cpp  EncodeHints.h  Writer.cpp  Writer.h  WriterException.h
core/src/zxing/common/: BitArray.cpp  BitArray.h  Counted.h
core/src/zxing/common/reedsolomon/: ReedSolomonEncoder.cpp  ReedSolomonEncoder.h
core/src/zxing/qrcode/: ErrorCorrectionLevel.cpp  ErrorCorrectionLevel.h  QRCodeWriter.cpp  QRCodeWriter.h  Version.cpp  Version.h
core/src/zxing/qrcode/decoder/: Mode.cpp  Mode.h
core/src/zxing/qrcode/encoder/: BlockPair.cpp  BlockPair.h  ByteMatrix.cpp  ByteMatrix.h  Encoder.cpp  Encoder.h  MaskUtil.cpp  MaskUtil.h  MatrixUtil.cpp  MatrixUtil.h  QRCode.cpp  QRCode.h
proj.android/: settings.gradle
proj.android/app/: build.gradle
proj.android/app/src/androidTest/java/com/ninhh/zxing/: ExampleInstrumentedTest.kt
proj.android/app/src/main/: AndroidManifest.xml
proj.android/app/src/main/java/com/ninhh/zxing/: MainActivity.kt
proj.android/app/src/main/res/values/: strings.xml  themes.xml
proj.android/app/src/main/res/values-night/: themes.xml
proj.android/app/src/test/java/com/ninhh/zxing/: ExampleUnitTest.kt
proj.android/gradle/wrapper/: gradle-wrapper.properties
proj.android/zxing-cpp/: build.gradle
proj.android/zxing-cpp/src/androidTest/java/com/ninhh/zxingcpp/: ExampleInstrumentedTest.kt
proj.android/zxing-cpp/src/main/: AndroidManifest.xml
proj.android/zxing-cpp/src/main/cpp/: CMakeLists.txt
proj.android/zxing-cpp/src/test/java/com/ninhh/zxingcpp/: ExampleUnitTest.kt
